--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title></title>
+    <title>sTUFFF......</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/styles.css"> 
+    <script src="js/scripts.js"></script>
 </head>
 <body>
-    <script src="js/scripts.js"></script>
+    <form>
+        <div>
+            <label for="age">Enter your human's age</label>
+            <input type="number" name="human-age" id="age" min="0">
+        </div>
+        <div>
+            <label for="pets">Enter you pets age</label>
+            <input type="number" name="pets-age" id="pets" min="0">
+        </div>
+        <div>
+            <input type="submit" value="Calculate Difference" name="add" id="submit-btn">
+        </div> 
+    </form> 
+    
 </body>
 </html>
