--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 <body>
     <form>
         <div>
+            <label for=""></label>
+            <input type="number" name="side-length" min="0" 
+        </div>
+        <div>
             <label for="age">Enter your human's age</label>
             <input type="number" name="human-age" id="age" min="0" max="90">
         </div>
